--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,18 @@
 {
- "compilerOptions": {
-  "target": "ES2020",
-  "module": "nodenext",
-  "outDir": "dist",
-  "rootDir": "src",
-  "strict": true,
-  "esModuleInterop": true,
-  "skipLibCheck": true,
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
+    "rootDir": "src",
+    "outDir": "dist",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
     "types": ["bun-types"],
-    "moduleResolution": "nodenext"
- },
- "include": ["src"],
- "exclude": ["node_modules", "dist"]
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
